--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build && inline-source --root dist dist/index.html",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
